--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"exportall.config.folderListener": ["/mock_srv"]
+	"exportall.config.folderListener": ["/mock_srv", "/app/components/custom_inputs"]
 }
